# sandbox

cudaSolverChol/: CMakeLists.txt  main.cpp
multiplicationTest/: CMakeLists.txt  common.hpp  main.cpp
